--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shalala",
   "version": "1.0.0",
-  "description": "Shalala website",
+  "description": "Shalala uses React and Nodejs for development",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
